# image-analyze-workers

./: .gitignore  README.md  all_publish.sh  all_upload.sh  publish.sh  upload.sh
000_DemoBase/: package-lock.json  package.json  tsconfig.json  webpack.config.js
000_WorkerBase/: .eslintrc.js  .gitignore  .npmignore  package-lock.json  package.json  tsconfig.json
001_bodypix-worker-js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
001_bodypix-worker-js_singlejs/: README.md  package-lock.json  package.json  rollup.config.js
001demo_bodypix-worker-js-demo/: .gitignore  base_build.sh  mod_build.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json
001demo_bodypix-worker-js-demo2/: .gitignore  package-lock.json  package.json
001demo_bodypix-worker-js-demo_old/: package-lock.json  package.json  sync.sh
002_facemesh-worker-js/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
002demo_facemesh-worker-js-demo/: .gitignore  mod_build.sh  package-lock.json  package.json  sync.sh
003_ascii-worker-js/: .npmignore  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
003demo_ascii-worker-js-demo/: .gitignore  mod_build.sh  package-lock.json  package.json  sync.sh  tsconfig.json  webpack.config.js
004_opencv-worker-js/: .gitignore  .npmignore  README.md  package-lock.json  package.json  tsconfig.json  (+1 more)
011_googlemeet-segmentation-worker-js/crate/: .gitignore  Cargo.toml
011_googlemeet-segmentation-worker-js/crate/src/: lib.rs
(+823 files in other folders)
