
[package]
name = "jbf"
version = "0.1.0"
authors = ["wokada <wataru.okada@flect.co.jp>"]
edition = "2018"

[dependencies]
wasm-bindgen = "^0.2"
js-sys = "^0.3.46"
once_cell = "^1.5.2"

[dependencies.web-sys]
version = "0.3.46"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
#overflow-checks = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-mutable-globals"]

